# cupyd

./: .gitignore  Makefile  README.md  Untitled-1.py  georef.py  llanquihue.py  poetry.toml  pyproject.toml  simulation_code.md  test_lib.py  test_llanquihue_results.py  thoughts.md  warnings_errors.md
.github/workflows/: linters.yaml
cupyd/: georef.py  results.py  simulation.py
docs/: exceptions.md  glosary.md  glossary.md  how_to_run_cupyd_with_llanquihue.md  roadmap.md  simulation_code.md  thoughts.md  warnings_errors.md
llanquihue/MODFLOW/: LLANQUIHUE.bas  LLANQUIHUE.dis  LLANQUIHUE.drn  LLANQUIHUE.hds  LLANQUIHUE.list  LLANQUIHUE.nam  LLANQUIHUE.nwt  LLANQUIHUE.oc  LLANQUIHUE.rch  LLANQUIHUE.upw
llanquihue/SWMM/: Llanquihue_base.rpt
llanquihue/SWMM/GIS/: SWMM_S.dbf  SWMM_S.shx  SWMM_SU.dbf  SWMM_SU.shx
llanquihue/results/MODFLOW/: LLANQUIHUE.bas  LLANQUIHUE.cbc  LLANQUIHUE.dis  LLANQUIHUE.drn  LLANQUIHUE.nam  LLANQUIHUE.oc  LLANQUIHUE.rch  LLANQUIHUE.upw
llanquihue/results/SWMM/: Llanquihue_base.rpt
llanquihue/results/SWMM/GIS/: SWMM_S.shp  SWMM_SU.shp  SWMM_nodes_zones.dbf
simulation/: results.py  simulation.py
swmm_modflow_oss/: __init__.py  georef.py
