[tool.poetry]
name = "swmm-modflow-oss"
version = "0.1.0"
description = "Integration scheme for coupling SWMM and MODFLOW"
authors = [
    "tscheuch <tscheuch@uc.cl>",
    "jricci1 <jricci1@uc.cl>",
    "nebil <nebil@uc.cl>",
]
readme = "README.md"
repository = "https://github.com/tscheuch/SWMM_MODFLOW_OSS"
keywords = ["flopy", "pyswmm"]

[tool.poetry.dependencies]
python = "^3.8"
flopy = "^3.3"
geopandas = "^0.10"
matplotlib = "^3.5"
pyshp = "^2.3.0"
# pyswmm = "^1.1"
rtree = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3"
isort = "^5.10.1"

# LINTER CONFIGURATIONS
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
