[tool.poetry]
name = "cupyd"
version = "0.1.0"
description = "A romantic integration scheme between SWMM & MODFLOW"
keywords = ["flopy", "pyswmm"]

# license = "TBD"
authors = [
    "Teresita Scheuch <tscheuch@uc.cl>",
    "Joaquín Ricci <jricci1@uc.cl>",
    "Nebil Kawas <nebil@uc.cl>",
]

readme = "README.md"
repository = "https://github.com/tscheuch/cupyd"

# We use a tilde (~) instead of a caret (^) for dependencies
# that do not follow a strict semver-driven releasing system.
# For further information about this matter, please refer to
# <https://python-poetry.org/docs/master/dependency-specification/>

[tool.poetry.dependencies]
python = "^3.9"
flopy = "^3.3"
geopandas = "^0.12"
pyshp = "^2.3"
pyswmm = "^1.2"
rtree = "^1.0"

# The following lines are part of a somewhat successful (it's debatable) attempt
# to make "cupyd" installable in every home -- especially those that use Windows.
# However, for now, these lines will be ignored to ease the development of cupyd.

# fiona = { version = "1.8.21", source = "localwheels" }
# gdal = { version = "3.4.3", source = "localwheels" }

[tool.poetry.group.dev.dependencies]
black = "^22.8"
isort = "^5.10"

# [[tool.poetry.source]]
# name = "localwheels"
# url = "http://nebil.github.io/moepypi"
# default = false
# secondary = false

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
